--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,13 +10,11 @@ services:
       - 6379:6379
     volumes:
     # save redisearch data to your current working directory
-      - $PWD/redisearch-data:/data
+      - ./redisearch-data:/data
 
     command:
       - "--loadmodule /usr/lib/redis/modules/redisearch.so"
       - "--save 10 100"
-
-
 
 volumes:
   redisearch-data:
