--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
 ENVIRONMENT='production'
 #ENVIRONMENT='development'
 
-PRODUCTION_HOST='35.198.243.6'
-DEVELOPMENT_HOST='192.168.1.102'
+# prod
+HOST='10.148.0.10'
+
+# dev
+#HOST='192.168.1.102'
