--- a/.env
+++ b/.env
@@ -1,8 +1,3 @@
-ENVIRONMENT='production'
-#ENVIRONMENT='development'
-
-# prod
-HOST='10.148.0.10'
-
-# dev
-#HOST='192.168.1.102'
+SETTINGS_FILE_FOR_DYNACONF='["settings.toml"]'
+ENV_FOR_DYNACONF="development"
+#ENV_FOR_DYNACONF="production"
