--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 SETTINGS_FILE_FOR_DYNACONF='["settings.toml"]'
-ENV_FOR_DYNACONF="development"
-#ENV_FOR_DYNACONF="production"
+#ENV_FOR_DYNACONF="development"
+ENV_FOR_DYNACONF="production"
