--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,41 +1,50 @@
+# isort
 - repo: https://github.com/pre-commit/mirrors-isort
   rev: v4.3.21
   hooks:
-  - id: isort
-    args:
-      - --line_length 88
-      - --use_parentheses True
-      - --include_trailing_comma True
-      - --multi_line_output 3
+    - id: isort
+      args: # arguments to configure isort
+        # making isort line length compatible with black
+        - --line_length 88
+        - --use_parentheses True
+        - --include_trailing_comma True
+        - --multi_line_output 3
 
-
+# black
 - repo: https://github.com/ambv/black
   rev: stable
   hooks:
-  - id: black
-    args:
-      - --line-length=88
-      - --include='\.pyi?$'
-      - --exclude="""\.git |
-                    \.__pycache__|
-                    \.hg|
-                    \.mypy_cache|
-                    \.tox|
-                    \.venv|
-                    _build|
-                    buck-out|
-                    build|
-                    dist"""
+    - id: black
+      args: # arguments to configure black
+        - --line-length=88
+        - --include='\.pyi?$'
 
-    language_version: python3.6
+        # these folders wont be formatted by black
+        - --exclude="""\.git |
+          \.__pycache__|
+          \.hg|
+          \.mypy_cache|
+          \.tox|
+          \.venv|
+          _build|
+          buck-out|
+          build|
+          dist"""
 
+      language_version: python3.6
 
+# flake8
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v2.3.0
   hooks:
-  - id: flake8
-    args:
-      - '--max-line-length=88'
-      - '--max-complexity=18'
-      - '--select=B,C,E,F,W,T4,B9'
-      - '--ignore=E203,E266,E501,W503,F403,F401,E402'
+    - id: flake8
+      args: # arguments to configure flake8
+        # making isort line length compatible with black
+        - "--max-line-length=88"
+        - "--max-complexity=18"
+        - "--select=B,C,E,F,W,T4,B9"
+
+        # these are errors that will be ignored by flake8
+        # check out their meaning here
+        # https://flake8.pycqa.org/en/latest/user/error-codes.html
+        - "--ignore=E203,E266,E501,W503,F403,F401,E402"
