--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,8 @@ version: 2
 jobs:
   build:
     #...
+    machine:
+      enabled: true
     steps:
       - run:
           name: Build
@@ -17,7 +19,7 @@ jobs:
           command: |
             ssh $SSH_USER@$SSH_HOST
             echo "Got in!"
-            exit 
+            exit
 
 workflows:
   version: 2
