--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,9 +17,10 @@ jobs:
       - run:
           name: Deploy Over SSH
           command: |
-            ssh $SSH_USER@$SSH_HOST
-            echo "Got in!"
-            exit
+            ssh $SSH_USER@$SSH_HOST bash -c '\
+            echo "Got In"
+            echo "say hi"
+            exit'
 
 workflows:
   version: 2
