--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,7 @@ jobs:
 
             # Pulling in the master repo
             git pull origin master
+            git fetch
             git checkout circleci-project-setup
 
             # Running deploy specific commands
