--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
             cd /app/area-search-engine/
 
             # Pulling in the master repo
-            git pull origin master
+            git pull origin master -f
 
             # Running deploy specific commands
             chmod +x ./deploy.sh
